# Simple-health-cli

./: .gitignore  README.md  health.db  main.py  pyproject.toml  requirements.txt  setup.py.bak
health_cli/: cli.py  health.db  init_db.py
health_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
health_cli/commands/: entry.py  goals.py  meal_planning.py  reporting.py  user_commands.py
health_cli/db/: config.py  database.py
health_cli/models/: __init__.py  food_entry.py  goals_entry.py  meal_plan_entry.py  mealplan_entry.py  users_entry.py
health_cli/utils/: parsers.py  validation.py
myapp/: cli.py  db.py  models.py
